[gd_scene load_steps=4 format=3 uid="uid://cpw7700wp3rud"]

[ext_resource type="Script" path="res://Card Spawner.gd" id="1_6sjw0"]
[ext_resource type="Texture2D" uid="uid://bgx5odjya75su" path="res://icon.svg" id="2_4hdjl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_al0gi"]
size = Vector2(121, 125)

[node name="Card Spawner" type="Node2D"]
script = ExtResource("1_6sjw0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(-1, -1)
texture = ExtResource("2_4hdjl")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_al0gi")

[node name="Spawn Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -88.0
offset_top = -191.0
offset_right = 20.0
offset_bottom = -168.0
scale = Vector2(2.06839, 3.84785)
text = "Card Spawner"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Spawn Timer" to="." method="_on_spawn_timer_timeout"]
